--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <li><a href="schedule.html" class="hover:text-blue-400">Schedule</a></li>
      
       <li><a href="location.html" class="hover:text-blue-400">Location</a></li>
-      <li><a href="register.html" class="hover:text-blue-400">Register</a></li>
+      
+      <li><a href="contact.html" class="hover:text-blue-400 ">Contact</a></li>
     </ul>
   </nav>
 
