--- a/schedule.html
+++ b/schedule.html
@@ -5,14 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Schedule</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Stacked background videos. Default video is visible unless a card is opened. */
+    .bg-videos video {
+      position: fixed;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
+      z-index: -9; /* sit behind content */
+      pointer-events: none;
+    }
+    /* default video shown when no card-specific video is visible */
+    .bg-videos video.default {
+      opacity: 1;
+      visibility: visible;
+      z-index: -10;
+    }
+
+    /* Use :has() on body to detect an open details descendant and show matching video.
+       Note: :has() requires a modern browser (Chrome 105+, Safari 15.4+, Firefox 115+).
+       This keeps the implementation JavaScript-free. */
+    body:has(details[data-target="fifa"]:open) .bg-videos video[data-for="fifa"],
+    body:has(details[data-target="cod"]:open) .bg-videos video[data-for="cod"],
+    body:has(details[data-target="mk"]:open) .bg-videos video[data-for="mk"],
+    body:has(details[data-target="rtr"]:open) .bg-videos video[data-for="rtr"],
+    body:has(details[data-target="fortnite"]:open) .bg-videos video[data-for="fortnite"],
+    body:has(details[data-target="lastofus"]:open) .bg-videos video[data-for="lastofus"] {
+      opacity: 1;
+      visibility: visible;
+    }
+  </style>
 </head>
 <body class="relative bg-black text-white">
   
-  <!-- Background Video -->
-  <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover opacity-40 -z-10">
-    <source src="fc25backvideo.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
 
   <!-- Navbar -->
   <nav class="bg-gray-900 p-4 flex justify-between items-center">
@@ -21,7 +50,8 @@
       <li><a href="index.html" class="hover:text-blue-400">Home</a></li>
       <li><a href="schedule.html" class="hover:text-blue-400">Schedule</a></li>
       <li><a href="location.html" class="hover:text-blue-400">Location</a></li>
-      <li><a href="register.html" class="hover:text-blue-400">Register</a></li>
+
+      <li><a href="contact.html" class="hover:text-blue-400 ">Contact</a></li>
     </ul>
   </nav>
 
@@ -31,8 +61,8 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
       <!-- FIFA -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-blue-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-blue-400">FIFA 25 ⚽</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-blue-500/50 transition duration-300" data-target="fifa">
+        <summary class="cursor-pointer text-2xl font-bold text-blue-400">FIFA 25 </summary>
         <img src="fc25back.jpeg" alt="FIFA 25" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕙 10:00 AM - eSports Arena</p>
@@ -41,8 +71,8 @@
       </details>
 
       <!-- COD -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-purple-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-purple-400">Call of Duty: Warzone 🎯</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-purple-500/50 transition duration-300" data-target="cod">
+        <summary class="cursor-pointer text-2xl font-bold text-purple-400">Call of Duty: Warzone </summary>
         <img src="cod.jpeg" alt="COD Warzone" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕦 11:30 AM - Battle Zone</p>
@@ -51,8 +81,8 @@
       </details>
 
       <!-- Mortal Kombat -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-red-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-red-400">Mortal Kombat 12 🥊</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-red-500/50 transition duration-300" data-target="mk">
+        <summary class="cursor-pointer text-2xl font-bold text-red-400">Mortal Kombat 12 </summary>
         <img src="mk.jpeg" alt="Mortal Kombat 12" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕐 1:00 PM - Fighting Stage</p>
@@ -61,8 +91,8 @@
       </details>
 
       <!-- Gran Turismo -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-green-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-green-400">Gran Turismo 8 🏎️</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-green-500/50 transition duration-300" data-target="rtr">
+        <summary class="cursor-pointer text-2xl font-bold text-green-400">Gran Turismo 8 </summary>
         <img src="rtr.jpeg" alt="Gran Turismo 8" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕝 2:30 PM - Racing Arena</p>
@@ -71,8 +101,8 @@
       </details>
 
       <!-- Fortnite -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-yellow-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-yellow-400">Fortnite 🔥</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-yellow-500/50 transition duration-300" data-target="fortnite">
+        <summary class="cursor-pointer text-2xl font-bold text-yellow-400">Fortnite </summary>
         <img src="fortnite.jpeg" alt="Fortnite" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕓 4:00 PM - Main Stage</p>
@@ -81,8 +111,8 @@
       </details>
 
       <!-- Last of Us -->
-      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-pink-500/50 transition duration-300">
-        <summary class="cursor-pointer text-2xl font-bold text-pink-400">The Last of Us: Multiplayer 🎬</summary>
+      <details class="bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-pink-500/50 transition duration-300" data-target="lastofus">
+        <summary class="cursor-pointer text-2xl font-bold text-pink-400">The Last of Us: Multiplayer </summary>
         <img src="The Last of Us, A Post-Apocalyptic Survival Game by Naughty Dog.jpeg" alt="The Last of Us Multiplayer" class="mt-4 w-full h-40 object-cover rounded-lg shadow-md hover:scale-105 transition">
         <div class="mt-4 text-left">
           <p>🕕 6:00 PM - Story Mode Arena</p>
@@ -91,5 +121,34 @@
       </details>
     </div>
   </section>
+
+  <!-- Stacked background videos (placed after the content so details[open] ~ selector works) -->
+  <div class="bg-videos">
+    <!-- default video (visible when no card is open) -->
+    <video class="default" autoplay muted loop playsinline preload="auto">
+      <source src="fc25backvideo.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
+    <!-- card-specific videos (these will become visible when the matching details is opened) -->
+    <video data-for="fifa" autoplay muted loop playsinline preload="none">
+      <source src="fc25backvideo.mp4" type="video/mp4">
+    </video>
+    <video data-for="cod" autoplay muted loop playsinline preload="none">
+      <source src="cod_video.mp4" type="video/mp4">
+    </video>
+    <video data-for="mk" autoplay muted loop playsinline preload="none">
+      <source src="mk_video.mp4" type="video/mp4">
+    </video>
+    <video data-for="rtr" autoplay muted loop playsinline preload="none">
+      <source src="rtr_video.mp4" type="video/mp4">
+    </video>
+    <video data-for="fortnite" autoplay muted loop playsinline preload="none">
+      <source src="fortnite_video.mp4" type="video/mp4">
+    </video>
+    <video data-for="lastofus" autoplay muted loop playsinline preload="none">
+      <source src="lastofus_video.mp4" type="video/mp4">
+    </video>
+  </div>
 </body>
 </html>
