--- a/index.html
+++ b/index.html
@@ -14,41 +14,52 @@
   <video autoplay muted loop class="fixed top-0 left-0 w-full h-full object-cover -z-10 opacity-40">
     <source src="ps4home.mp4" type="video/mp4">
   </video>
-   <!-- Navbar -->
-  <nav class="bg-gray-900 border-gray-900 dark:bg-gray-900 dark:border-gray-700">
+ 
+  <!-- Navbar -->
+  <nav class="bg-gray-900  bg-opacity-50 shadow-lg hover:shadow-green-500/50 transition duration-300">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="index.html" 
-   class="flex items-center space-x-3 rtl:space-x-reverse 
-          text-gray-700 hover:text-blue-500 
-          transition-colors duration-300">
+         <a href="index.html" 
+             class="flex items-center 
+             space-x-1 rtl:space-x-reverse 
+              text-white hover:text-blue-500 
+             transition-colors duration-300 ">
           
-  <i class="fa-solid fa-ghost text-2xl"></i>
-  
-  <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
-    SummerVibez
-  </span>
-</a>
+             <i class="fa-solid fa-gamepad text-4xl">
 
-     <ul>
-        <li><a href="index.html" class="hover:text-blue-400">Home</a></li>  
-     </ul>
- <ul>
-  <li><a href="schedule.html" class="hover:text-blue-400">Schedule</a></li>
-</ul>
- <ul> 
-  <li><a href="location.html" class="hover:text-blue-400">Location</a></li>
-</ul>
- <ul>   
-  <li><a href="contact.html" class="hover:text-blue-400 ">Contact</a></li>
-</ul>
+             </i>
+             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
+                SummerVibez
+             </span>
+        </a>
+      <ul>
+        <li>
+          <a href="index.html" class="hover:text-blue-400">Home</a>
+        </li>  
+       </ul>
+       <ul>
+        <li>
+          <a href="schedule.html" class="hover:text-blue-400">Schedule</a>
+        </li>
+       </ul>
+       <ul> 
+        <li>
+          <a href="location.html" class="hover:text-blue-400">Location</a>
+        </li>
+       </ul>
+       <ul>   
+        <li>
+          <a href="contact.html" class="hover:text-blue-400 ">Contact</a>
+        </li>
+       </ul>
  
        
     </div>
   </nav>
 
-  <!-- Hero Section with Countdown -->
+  <!-- Hero Section with date -->
   <section class="h-screen flex flex-col items-center justify-center text-center px-6">
-    <h2 class="text-5xl font-extrabold mb-4 bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-green-500/50 transition duration-300">Welcome to the Summer Vibez Gaming Expo 2025</h2>
+    <h2 class="text-5xl font-extrabold mb-4 bg-gray-900 bg-opacity-80 p-6 rounded-lg shadow-lg hover:shadow-green-500/50 transition duration-300">
+      Welcome to the Summer Vibez Gaming Expo 2025</h2>
     <p class="text-xl mb-6">Get ready for exclusive game reveals, epic tournaments and more!</p>
 
     <!-- date -->
@@ -102,8 +113,8 @@
           </div>
       </div>
 
-      <!-- Footer Bottom -->
-      <div class="text-center text-white mt-8">
+  <!-- Footer Bottom -->
+      <div class="text-center text-white hover:text-blue-600 mt-8">
           &copy; 2025 SmVIBEZ. All rights reserved.
       </div>
   </footer>
