--- a/location.html
+++ b/location.html
@@ -9,37 +9,43 @@
 </head>
 <body class="bg-black text-white">
   <!-- Navbar -->
-  <nav class="bg-gray-900 border-gray-900 dark:bg-gray-900 dark:border-gray-700">
+  <nav class="bg-gray-900  bg-opacity-50 shadow-lg hover:shadow-green-500/50 transition duration-300">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="index.html" 
-   class="flex items-center space-x-3 rtl:space-x-reverse 
-          text-gray-700 hover:text-blue-500 
-          transition-colors duration-300">
+         <a href="index.html" 
+             class="flex items-center 
+             space-x-1 rtl:space-x-reverse 
+              text-white hover:text-blue-500 
+             transition-colors duration-300 ">
           
-  <i class="fa-solid fa-ghost text-2xl"></i>
-  
-  <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
-    SummerVibez
-  </span>
-</a>
-
-     <ul>
-        <li><a href="index.html" class="hover:text-blue-400">Home</a></li>  
-     </ul>
- <ul>
-  <li><a href="schedule.html" class="hover:text-blue-400">Schedule</a></li>
-</ul>
- <ul> 
-  <li><a href="location.html" class="hover:text-blue-400">Location</a></li>
-</ul>
- <ul>   
-  <li><a href="contact.html" class="hover:text-blue-400 ">Contact</a></li>
-</ul>
+          <i class="fa-solid fa-gamepad text-4xl"></i>
+         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
+                SummerVibez
+          </span>
+        </a>
+      <ul>
+        <li>
+          <a href="index.html" class="hover:text-blue-400">Home</a>
+        </li>  
+       </ul>
+       <ul>
+        <li>
+          <a href="schedule.html" class="hover:text-blue-400">Schedule</a>
+        </li>
+       </ul>
+       <ul> 
+        <li>
+          <a href="location.html" class="hover:text-blue-400">Location</a>
+        </li>
+       </ul>
+       <ul>   
+        <li>
+          <a href="contact.html" class="hover:text-blue-400 ">Contact</a>
+        </li>
+       </ul>
  
        
     </div>
   </nav>
-
 
   <section class="p-10 text-center">
     <h2 class="text-4xl font-bold mb-6">Event Location</h2>
@@ -83,8 +89,8 @@
           </div>
       </div>
 
-      <!-- Footer Bottom -->
-      <div class="text-center text-white mt-8">
+    <!-- Footer Bottom -->
+      <div class="text-center text-white hover:text-blue-600 mt-8">
           &copy; 2025 SmVIBEZ. All rights reserved.
       </div>
   </footer>
