--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register | Summer Vibez Gaming Expo</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/9507aa749c.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-black text-white relative">
 
@@ -12,38 +13,44 @@
   <video autoplay muted loop class="fixed top-0 left-0 w-full h-full object-cover opacity-40 -z-10">
     <source src="fc25backvideo.mp4" type="video/mp4">
   </video>
- <!-- Navbar -->
-  <nav class="bg-gray-900 border-gray-900 dark:bg-gray-900 dark:border-gray-700">
+   <!-- Navbar -->
+  <nav class="bg-gray-900  bg-opacity-50 shadow-lg hover:shadow-green-500/50 transition duration-300">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="index.html" 
-   class="flex items-center space-x-3 rtl:space-x-reverse 
-          text-gray-700 hover:text-blue-500 
-          transition-colors duration-300">
+         <a href="index.html" 
+             class="flex items-center 
+             space-x-1 rtl:space-x-reverse 
+              text-white hover:text-blue-500 
+             transition-colors duration-300 ">
           
-  <i class="fa-solid fa-ghost text-2xl"></i>
-  
-  <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
-    SummerVibez
-  </span>
-</a>
-
-     <ul>
-        <li><a href="index.html" class="hover:text-blue-400">Home</a></li>  
-     </ul>
- <ul>
-  <li><a href="schedule.html" class="hover:text-blue-400">Schedule</a></li>
-</ul>
- <ul> 
-  <li><a href="location.html" class="hover:text-blue-400">Location</a></li>
-</ul>
- <ul>   
-  <li><a href="contact.html" class="hover:text-blue-400 ">Contact</a></li>
-</ul>
+          <i class="fa-solid fa-gamepad text-4xl"></i>
+         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
+                SummerVibez
+          </span>
+        </a>
+      <ul>
+        <li>
+          <a href="index.html" class="hover:text-blue-400">Home</a>
+        </li>  
+       </ul>
+       <ul>
+        <li>
+          <a href="schedule.html" class="hover:text-blue-400">Schedule</a>
+        </li>
+       </ul>
+       <ul> 
+        <li>
+          <a href="location.html" class="hover:text-blue-400">Location</a>
+        </li>
+       </ul>
+       <ul>   
+        <li>
+          <a href="contact.html" class="hover:text-blue-400 ">Contact</a>
+        </li>
+       </ul>
  
        
     </div>
   </nav>
-
 
   <!-- Registration Section -->
   <section class="p-10 text-center">
